syntax = "proto3";
package warden.async.v1beta1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "warden/async/v1beta1/params.proto";
import "warden/async/v1beta1/task.proto";

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/async/types/v1beta1";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/warden/async/params";
  }

  // Queries a list of Tasks.
  rpc Tasks(QueryTasksRequest) returns (QueryTasksResponse) {
    option (google.api.http).get = "/warden/async/tasks";
  }

  // Queries a Task by its id.
  rpc TaskById(QueryTaskByIdRequest) returns (QueryTaskByIdResponse) {
    option (google.api.http).get = "/warden/async/task/{id}";
  }

  // Queries Tasks that do not have a result yet.
  rpc PendingTasks(QueryPendingTasksRequest) returns (QueryPendingTasksResponse) {
    option (google.api.http).get = "/warden/async/pending_tasks";
  }

  // Queries Plugins by validator.
  rpc PluginsByValidator(QueryPluginsByValidatorRequest) returns (QueryPluginsByValidatorResponse) {
    option (google.api.http).get = "/warden/async/plugins_by_validator/{validator}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryTasksRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  // optional filter to query tasks by creator
  string creator = 2 [
    (gogoproto.nullable) = true,
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
}

message TaskResponse {
  Task task = 1 [(gogoproto.nullable) = false];
  repeated TaskVote votes = 2 [(gogoproto.nullable) = false];
  TaskResult result = 3 [(gogoproto.nullable) = true];
}

message QueryTasksResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated TaskResponse tasks = 2 [(gogoproto.nullable) = false];
}

message QueryTaskByIdRequest {
  uint64 id = 1;
}

message QueryTaskByIdResponse {
  TaskResponse taskResponse = 1 [(gogoproto.nullable) = false];
}

message QueryPendingTasksRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryPendingTasksResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated Task tasks = 2 [(gogoproto.nullable) = false];
}

message QueryPluginsByValidatorRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string validator = 2 [(cosmos_proto.scalar) = "cosmos.ConsensusAddressString"];
}

message QueryPluginsByValidatorResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated string plugins = 2 [(gogoproto.nullable) = false];
}
